k3s/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8200
      targetPort: 8096
      protocol: TCP
