k3s/apps/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8200
  tls:
    secretName: wildcard-home-ijlalahmad-dev-tls
